# pyo3-fun

./: build.sh  count.py  test.py
count_rs/: Cargo.toml  pyproject.toml
count_rs/src/: lib.rs
