[package]
name = "count_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "count_rs"
crate-type = ["cdylib"]

[dependencies]
nohash-hasher = "0.2.0"
pyo3 = "0.22.0"
rand = { version = "0.8.5", features = ["small_rng"] }

[profile.release]
lto = true
